# RCSB_UTILS_SEQALIGN HISTORY
  26-Oct-2020  - V0.10 Created module
  28-Oct-2020  - V0.11 Create pipeline workflow
  28-Oct-2020  - V0.12 Add result parser
   7-Nov-2020  - V0.13 Add methods to evaluate search results
  11-Nov-2020  - V0.14 Add full UniProt xref export method.
   7-Dec-2020  - V0.15 Refactor module, migrate MiscUtils methods to other modules, remove mock-data submodule
  26-Mar-2021  - V0.16 Adjust fields and field names in alignment output object
  28-Mar-2021  - V0.17 Further extensions in fields in alignment output object
  13-May-2021  - V0.18 Add searchDatabaseFasta() and make searchDatabase() consistent with mapDatabase()
  12-Jun-2021  - V0.19 Add bit score filtering in __getMatchResults()
  12-Jun-2021  - V0.20 Updating installation scripts