@@ -10,3 +10,4 @@
   13-May-2021  - V0.18 Add searchDatabaseFasta() and make searchDatabase() consistent with mapDatabase()
   12-Jun-2021  - V0.19 Add bit score filtering in __getMatchResults()
   12-Jun-2021  - V0.20 Updating installation scripts
+  27-Jun-2021  - V0.21 Adjust handling of defaults for formatOutput parameter in __formatSearchResults()
